data/derived/comb/progs/unify/prog1774.ml.out
Characters 165-228:
  | r when r < 5 -> buildAverage((build(rand, depth - 1))),(build(rand, depth - 1))
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
